--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="flex items-center justify-between flex-wrap">
 					<div class="flex items-center space-x-3">
 						<img
-							src="Logo PKBM.jpg"
+							src="./Logo%20PKBM.jpg"
 							alt="Logo PKBM"
 							class="h-12 w-12 rounded-full border-2 border-white"
 						/>
@@ -505,7 +505,7 @@
 							class="group relative overflow-hidden rounded-lg shadow-lg hover:shadow-xl transition-all duration-300"
 						>
 							<img
-								src="Guru dan Staff.jpg"
+								src="./Guru%20dan%20Staff.jpg"
 								alt="Guru dan Staf"
 								class="w-full h-48 md:h-64 object-cover group-hover:scale-105 transition-transform duration-300"
 							/>
@@ -526,7 +526,7 @@
 							class="group relative overflow-hidden rounded-lg shadow-lg hover:shadow-xl transition-all duration-300"
 						>
 							<img
-								src="Kegiatan Uji Kompetensi_.jpg"
+								src="./Kegiatan%20Uji%20Kompetensi_.jpg"
 								alt="Kegiatan Uji Kompetensi"
 								class="w-full h-48 md:h-64 object-cover group-hover:scale-105 transition-transform duration-300"
 							/>
@@ -547,7 +547,7 @@
 							class="group relative overflow-hidden rounded-lg shadow-lg hover:shadow-xl transition-all duration-300"
 						>
 							<img
-								src="Magang di lkp mandiri.jpg"
+								src="./Magang%20di%20LKP%20Mandiri.jpg"
 								alt="Kerjasama LPK Mandiri"
 								class="w-full h-48 md:h-64 object-cover group-hover:scale-105 transition-transform duration-300"
 							/>
@@ -568,7 +568,7 @@
 							class="group relative overflow-hidden rounded-lg shadow-lg hover:shadow-xl transition-all duration-300"
 						>
 							<img
-								src="ProgrAm PKK Tata busana tahun 2020.jpg"
+								src="./ProgrAm%20PKK%20Tata%20busana%20tahun%202020.jpg"
 								alt="Program PKK Tata Busana"
 								class="w-full h-48 md:h-64 object-cover group-hover:scale-105 transition-transform duration-300"
 							/>
@@ -589,7 +589,7 @@
 							class="group relative overflow-hidden rounded-lg shadow-lg hover:shadow-xl transition-all duration-300"
 						>
 							<img
-								src="Magang Upr.jpg"
+								src="./Magang%20UPR.jpg"
 								alt="Magang UPR"
 								class="w-full h-48 md:h-64 object-cover group-hover:scale-105 transition-transform duration-300"
 							/>
@@ -611,7 +611,7 @@
 							class="group relative overflow-hidden rounded-lg shadow-lg hover:shadow-xl transition-all duration-300"
 						>
 							<img
-								src="Hari Pendidikan.jpg"
+								src="./Hari%20Pendidikan.jpg"
 								alt="Hari Pendidikan"
 								class="w-full h-48 md:h-64 object-cover group-hover:scale-105 transition-transform duration-300"
 							/>
@@ -633,7 +633,7 @@
 							class="group relative overflow-hidden rounded-lg shadow-lg hover:shadow-xl transition-all duration-300"
 						>
 							<img
-								src="Senam Pagi.jpg"
+								src="./Senam%20Pagi.jpg"
 								alt="Senam Pagi"
 								class="w-full h-48 md:h-64 object-cover group-hover:scale-105 transition-transform duration-300"
 							/>
@@ -654,7 +654,7 @@
 							class="group relative overflow-hidden rounded-lg shadow-lg hover:shadow-xl transition-all duration-300"
 						>
 							<img
-								src="Perpisahan_.jpg"
+								src="./Perpisahan_.jpg"
 								alt="Perpisahan"
 								class="w-full h-48 md:h-64 object-cover group-hover:scale-105 transition-transform duration-300"
 							/>
@@ -687,7 +687,7 @@
 								class="bg-gray-50 p-4 md:p-6 rounded-lg shadow-lg text-center"
 							>
 								<img
-									src="Back to School.jpg"
+									src="./Back%20to%20School.jpg"
 									alt="Poster Back to School"
 									class="w-full max-w-xs mx-auto rounded-lg shadow-md mb-3 md:mb-4"
 								/>
@@ -699,7 +699,7 @@
 								class="bg-gray-50 p-4 md:p-6 rounded-lg shadow-lg text-center"
 							>
 								<img
-									src="PPDB.jpg"
+									src="./PPDB.jpg"
 									alt="Poster PPDB"
 									class="w-full max-w-xs mx-auto rounded-lg shadow-md mb-3 md:mb-4"
 								/>
