change name img

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 							class="group relative overflow-hidden rounded-lg shadow-lg hover:shadow-xl transition-all duration-300"
 						>
 							<img
-								src="./Magang%20di%20LKP%20Mandiri.jpg"
+								src="./magang_mandiri.jpg"
 								alt="Kerjasama LPK Mandiri"
 								class="w-full h-48 md:h-64 object-cover group-hover:scale-105 transition-transform duration-300"
 							/>
@@ -589,7 +589,7 @@
 							class="group relative overflow-hidden rounded-lg shadow-lg hover:shadow-xl transition-all duration-300"
 						>
 							<img
-								src="./Magang%20UPR.jpg"
+								src="./magang.jpg"
 								alt="Magang UPR"
 								class="w-full h-48 md:h-64 object-cover group-hover:scale-105 transition-transform duration-300"
 							/>
