--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>PKBM Cahaya Bangsa Palangka Raya</title>
+		<link rel="icon" type="image/jpeg" href="./Logo%20PKBM.jpg" />
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script>
 			tailwind.config = {
