--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 								Paket C IPS
 							</h4>
 							<p class="text-base md:text-lg leading-relaxed">
-								97 siswa lulus, mayoritas melanjutkan pendidikan tinggi atau
+								100+ siswa lulus, mayoritas melanjutkan pendidikan tinggi atau
 								bekerja. Alumni berkontribusi aktif di Kota Palangka Raya.
 							</p>
 						</div>
